[gd_scene load_steps=10 format=2]

[ext_resource path="res://tudo/fonts/BRITANIC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://tudo/Botoes/botao.png" type="Texture" id=2]
[ext_resource path="res://tudo/Botoes/botaoAoClicar.png" type="Texture" id=3]
[ext_resource path="res://tudo/Botoes/BotaoClique.png" type="Texture" id=4]
[ext_resource path="res://tudo/imagens/menu/comeca.jpg" type="Texture" id=5]
[ext_resource path="res://script/CAZUMBAR.gd" type="Script" id=6]
[ext_resource path="res://tudo/fonts/vademecum.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 7 )

[node name="CAZUMBAR" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 83, 367 )
scale = Vector2( 0.495833, 0.471875 )
texture = ExtResource( 5 )
offset = Vector2( 178.487, -137.748 )

[node name="botao1" type="TextureButton" parent="."]
margin_left = 88.0
margin_top = 94.0
margin_right = 263.0
margin_bottom = 144.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="botao1"]
margin_right = 166.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="botao2" type="TextureButton" parent="."]
margin_left = 85.0
margin_top = 257.0
margin_right = 260.0
margin_bottom = 307.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="botao2"]
margin_top = -1.0
margin_right = 166.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="botao3" type="TextureButton" parent="."]
margin_left = 85.0
margin_top = 332.0
margin_right = 260.0
margin_bottom = 382.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="botao3"]
margin_right = 166.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="botao4" type="TextureButton" parent="."]
margin_left = 84.0
margin_top = 411.0
margin_right = 259.0
margin_bottom = 461.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="botao4"]
margin_right = 166.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
margin_left = 62.0
margin_top = 166.0
margin_right = 290.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true
clip_text = true

[connection signal="pressed" from="botao1" to="." method="_on_botao1_pressed"]
[connection signal="pressed" from="botao2" to="." method="_on_botao2_pressed"]
[connection signal="pressed" from="botao3" to="." method="_on_botao3_pressed"]
[connection signal="pressed" from="botao4" to="." method="_on_botao4_pressed"]
